tooling/nargo_cli/tests/snapshots/compile_failure/noirc_frontend_tests_bound_checks_overflowing_i8/execute__tests__force_brillig_false_inliner_0_output.snap
---
source: tooling/nargo_cli/tests/execute.rs
expression: "&format!(\"success: {:?}\\nexit_code: {}\\n----- stdout -----\\n{}\\n----- stderr -----\\n{}\",\noutput.status.success(), output.status.code().unwrap_or(!0), stdout, stderr)"
---
success: false
exit_code: 1
----- stdout -----

----- stderr -----
error: The value `128` cannot fit into `i8` which has range `-128..=127`
  ┌─ src/main.nr:3:25
  │
3 │             let _: i8 = 128;
  │                         ---
  │

Aborting due to 1 previous error
