tooling/nargo_cli/tests/snapshots/compile_failure/noirc_frontend_tests_bound_checks_overflowing_i8/execute__tests__stderr.snap
---
source: tooling/nargo_cli/tests/execute.rs
expression: stderr
---
error: The value `128` cannot fit into `i8` which has range `-128..=127`
  ┌─ src/main.nr:3:25
  │
3 │             let _: i8 = 128;
  │                         ---
  │

Aborting due to 1 previous error
